--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a href="#projects" class="btn">View My Work</a>
             </div>
             <div class="hero-image">
-                <img src="./WhatsApp Image 2025-10-14 at 00.12.45.jpeg" alt="Soumya Chatterjee" class="hero-img">
+                <img src="./Soumya.jpeg" alt="Soumya Chatterjee" class="hero-img">
             </div>
         </div>
     </section>
