--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soumya Chatterjee</title>
+    <title>Soumya Chatterjee | Full Stack Developer</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,21 +31,19 @@
 
     <section id="home" class="hero">
         <div class="container hero-content">
+            <div class="hero-image">
+                <img src="./Soumya.jpeg" alt="Soumya Chatterjee" class="hero-img">
+            </div>
             <div class="hero-text">
                 <h3>Hello, I'm</h3>
                 <h1>Soumya Chatterjee</h1>
-                <h2>And I'm  <span class="typing"></span></h2>
+                <h2>And I'm a <span class="typing"></span></h2>
                 <div class="social-links">
                     <a href="https://github.com/soumya28022005" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
                     <a href="https://www.linkedin.com/in/soumya-chatterjee-76754a2b2/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
                     <a href="https://www.instagram.com/soumyachatterjee051/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
                 </div>
                 <a href="#projects" class="btn">View My Work</a>
-            </div>
-            <br>
-            <br>
-            <div class="hero-image">
-                <img src="./Soumya.jpeg" alt="Soumya Chatterjee" class="hero-img">
             </div>
         </div>
     </section>
