mobile screen change

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <h2>My Projects</h2>
             <div class="card-container">
                 <div class="project-card">
-                    <h3>Doctor Appointment Frontend</h3>
+                    <h3>Doctor Appointment</h3>
                     <p>A responsive frontend for a healthcare platform.</p>
                     <div class="project-links">
                         <a href="https://soumya28022005.github.io/soumya_doctor_frontend/" target="_blank" class="btn">Live Demo</a>
