--- a/index.html
+++ b/index.html
@@ -136,12 +136,21 @@
         <div class="modal-content">
             <span class="close-btn">&times;</span>
             <h2 id="modalTitle"></h2>
+            <h1>Doctor Appointment</h1>
             <div class="modal-body">
-                <h3>Why Use This?</h3>
+                <h3>Why Use This?: </h3>
+                <p>To provide a seamless and user-friendly interface for patients to book appointments with doctors. This improves efficiency and reduces manual booking efforts for hospital staff.</p>
                 <p id="modalWhy"></p>
                 <h3>Key Features</h3>
+                <p><ul>
+                    <li>View detailed doctor profiles and specializations.</li>
+                    <li>Check doctor availability and select a suitable time slot.</li>
+                    <li>Responsive design for access on any device (mobile, tablet, desktop).</li>
+                    <li>Simple and intuitive booking process.</li>
+                </ul></p>
                 <ul id="modalFeatures"></ul>
                 <h3>Technologies Used</h3>
+                <button>HTML</button> <button>CSS3</button> <button>JavaScript</button>
                 <div id="modalTech" class="tech-tags"></div>
             </div>
         </div>
