--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <h2 id="modalTitle"></h2>
             <h1>Doctor Appointment</h1>
             <div class="modal-body">
-                <h3>Why Use This?: </h3>
+                <h3>Why Use This? </h3>
                 <p>To provide a seamless and user-friendly interface for patients to book appointments with doctors. This improves efficiency and reduces manual booking efforts for hospital staff.</p>
                 <p id="modalWhy"></p>
                 <h3>Key Features</h3>
@@ -150,8 +150,14 @@
                 </ul></p>
                 <ul id="modalFeatures"></ul>
                 <h3>Technologies Used</h3>
-                <button>HTML</button> <button>CSS3</button> <button>JavaScript</button>
-                <div id="modalTech" class="tech-tags"></div>
+                <div class="tech-tags">
+                    <span class="tech-tag">HTML5</span>
+                    <span class="tech-tag">CSS3</span>
+                    <span class="tech-tag">JavaScript</span>
+                </div>
+                <div class="modal-footer-links">
+                     <a href="https://soumya28022005.github.io/soumya_doctor_frontend/" target="_blank" class="btn">Live Demo</a>
+                </div>
             </div>
         </div>
     </div>
