press phone number to call

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <li><i class="fas fa-map-marker-alt"></i> Durgapur, West Bengal, India</li>
                 <li><i class="fab fa-whatsapp"></i> <a href="https://wa.me/qr/T2UPM72BWBJFK1" target="_blank">Message on WhatsApp</a></li>
                 <li><i class="fas fa-envelope"></i> <a href="mailto:soumyachatterjee2802@gmail.com">soumyachatterjee2802@gmail.com</a></li>
-                 <li><i class="fas fa-phone"></i>6296398479</a></li>
+                 <li><i class="fas fa-phone"></i> <a href="tel:+916296398479">+91 6296398479</a></li>
                 
             </ul>
         </div>
