press phone number to call

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                         <li><i class="fab fa-css3-alt"></i> CSS3</li>
                         <li><i class="fab fa-js"></i> JavaScript</li>
                         <li><i class="fab fa-bootstrap"></i> Bootstrap</li>
+                        <li><i class="fas fa-code"></i> jQuery</li>
                         <li><i class="fas fa-leaf"></i> EJS</li>
                     </ul>
                 </div>
