press phone number to call

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                     <ul>
                         <li><i class="fab fa-node-js"></i> Node.js</li>
                         <li><i class="fas fa-server"></i> Express.js</li>
+                        <li><i class="fas fa-cogs"></i> RESTful APIs (CRUD)</li> </ul>
                     </ul>
                 </div>
                 <div class="skill-category">
