press phone number to call

--- a/index.html
+++ b/index.html
@@ -159,6 +159,10 @@
                     <span class="tech-tag">HTML5</span>
                     <span class="tech-tag">CSS3</span>
                     <span class="tech-tag">JavaScript</span>
+                    <span class="tech-tag">Node.js</span>
+                    <span class="tech-tag">Express</span>
+                    <span class="tech-tag">REST API(CRUD)</span>
+                    <span class="tech-tag">PostgreSQL</span>
                 </div>
                 <div class="modal-footer-links">
                      <a href="https://soumya28022005.github.io/soumya_doctor_frontend/" target="_blank" class="btn">Live Demo</a>
