--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header id="header">
         <div class="container">
-            <a href="index.html" class="logo">SOUMYA CHATTERJEE</a>
+            <a href="#" class="logo">SOUMYA CHATTERJEE</a>
             <nav id="main-nav">
                 <ul>
                     <li><a href="#about" class="nav-link">About</a></li>
