--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                         <li><i class="fab fa-node-js"></i> Node.js</li>
                         <li><i class="fas fa-server"></i> Express.js</li>
                         <li><i class="fas fa-cogs"></i> RESTful APIs (CRUD)</li> </ul>
+                        <li><i class="fas fa-shield-alt"></i> Passport.js</li>
                     </ul>
                 </div>
                 <div class="skill-category">
